# rpanel

./: .env  .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: main.rs
agent/src/config/: mod.rs
agent/src/feature/docker/: container.rs  image.rs  mod.rs
agent/src/feature/grpc/: handle.rs  mod.rs  status.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/docker/: mod.rs
common/src/registry/: mod.rs
controller/: Cargo.toml
controller/src/config/: mod.rs
controller/src/feature/: event.rs  mod.rs
dev/: Database.md
grpc/: Cargo.toml  build.rs
grpc/proto/: bridge.proto
grpc/src/: bridge.rs  docker.rs  lib.rs
grpc/src/model/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20251222_081612_create_agent_system_status.rs  m20251222_081612_create_status.rs  m20251222_081612_create_system_status.rs  m20251224_091017_create_agent_table.rs  m20251225_100000_create_docker_info_table.rs  main.rs
migration/src/entity/: mod.rs  prelude.rs  t_agent.rs  t_agent_docker_info.rs  t_agent_system_status.rs  t_system_status.rs
rpanel-agent/: Cargo.toml
rpanel-agent/src/: main.rs
rpanel-agent/src/config/: args.rs  mod.rs
rpanel-agent/src/feature/: mod.rs
rpanel-agent/src/feature/docker/: container.rs  image.rs  mod.rs
rpanel-agent/src/feature/grpc/: handle.rs  mod.rs  recv.rs  status.rs
rpanel-common/: Cargo.toml
rpanel-common/src/: agent.rs  lib.rs  status.rs
rpanel-common/src/docker/: mod.rs
rpanel-controller/: Cargo.toml
rpanel-controller/src/: main.rs
rpanel-controller/src/config/: args.rs  mod.rs
rpanel-controller/src/feature/: mod.rs
rpanel-controller/src/feature/axum/: handle.rs  mod.rs
rpanel-controller/src/feature/database/: mod.rs
rpanel-controller/src/feature/grpc/: docker.rs  handle.rs  mod.rs
rpanel-grpc/: Cargo.toml  build.rs
rpanel-grpc/proto/: docker.proto
rpanel-grpc/src/: docker.rs  lib.rs
rpanel-grpc/src/model/: mod.rs
rpanel-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
rpanel-web/src/: App.css  App.tsx  locales.ts
rpanel-web/src/pages/: DockerManager.tsx
rpanel-web/src/utils/: request.ts
web/: .gitignore  index.html
web/src/: App.tsx  index.css  locales.ts  types.ts
web/src/api/: api.ts
web/src/pages/: Dashboard.tsx
(+7 files in other folders)
