[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
sea-orm = "1.1.19"

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]
