[package]
name = "rpanel-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
rpanel-grpc = { path = "../rpanel-grpc" }
rpanel-common = { path = "../rpanel-common" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
toml = "0.9.8"
bollard = "0.19.4"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4"] }
clap = { version = "4.5.53", features = ["derive", "default"] }