[package]
name = "rpanel-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
rpanel-grpc = { path = "../rpanel-grpc"}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
toml = "0.9.8"