[package]
name = "rpanel-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
rpanel-grpc = { path = "../rpanel-grpc"}
rpanel-common = { path = "../rpanel-common"}
migration = { path = "../migration"}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive", "default"] }
# sea-orm（基于 sqlx）
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite"] }
# 可选：时间
chrono = "0.4.42"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs"] }